name covers nav button.  Index fix

--- a/css/nav-footer.css
+++ b/css/nav-footer.css
@@ -13,6 +13,7 @@ figure {
   overflow: hidden;
   position: relative;
   height: 100px;
+  z-index: 120002;
 }
 .nav-portfolio  {
   transition: all 500ms linear;
